--- a/model_app/frontend/src/Unity/WebGL Builds/index.html
+++ b/model_app/frontend/src/Unity/WebGL Builds/index.html
@@ -45,9 +45,9 @@ https://github.com/sno/unity-webgl-responsive
     <script src="MyLoader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Arpil14(3).data.gz",
-        frameworkUrl: "Build/Arpil14(3).framework.js.gz",
-        codeUrl: "Build/Arpil14(3).wasm.gz",
+        dataUrl: "Build/April15.data.gz",
+        frameworkUrl: "Build/April15.framework.js.gz",
+        codeUrl: "Build/April15.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "AnytownUSA",
