attempting to make pages more responsive

--- a/model_app/frontend/src/containers/blog_posts/blog.html
+++ b/model_app/frontend/src/containers/blog_posts/blog.html
@@ -6,7 +6,9 @@
         <link rel="preconnect" href="//logx.optimizely.com"/>
         <script src="https://cdn.optimizely.com/js/15508090763.js"></script>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5"/>
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="HandheldFriendly" content="true">
         <title>Built with MongoDB: Interseller | MongoDB Blog</title>
         <meta name="description" content="Interseller is a recruiting tech startup that uses MongoDB to help 4,000 recruiters quickly hire the right candidates. "/>
         <meta property="og:site_name" content="MongoDB"/>
