--- a/model_app/frontend/src/Unity/WebGL Builds/index.html
+++ b/model_app/frontend/src/Unity/WebGL Builds/index.html
@@ -19,7 +19,7 @@ https://github.com/sno/unity-webgl-responsive
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>AnytownUSA</title>
+    <title>New Unity Project</title>
   </head>
   <body>
     <div class="webgl-wrapper">
@@ -45,13 +45,13 @@ https://github.com/sno/unity-webgl-responsive
     <script src="MyLoader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/May21.data.gz",
-        frameworkUrl: "Build/May21.framework.js.gz",
-        codeUrl: "Build/May21.wasm.gz",
+        dataUrl: "Build/JuneBuild.data.gz",
+        frameworkUrl: "Build/JuneBuild.framework.js.gz",
+        codeUrl: "Build/JuneBuild.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "AnytownUSA",
-        productVersion: "1.0",
+        productName: "New Unity Project",
+        productVersion: "0.1",
       }).then((unityInstance) => {
         myGameInstance = unityInstance;
       });
