Updated Team Page and Simulator, Unity still needs to be put in

--- a/model_app/frontend/src/Unity/WebGL Builds/index.html
+++ b/model_app/frontend/src/Unity/WebGL Builds/index.html
@@ -45,9 +45,9 @@ https://github.com/sno/unity-webgl-responsive
     <script src="MyLoader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Test2.data.gz",
-        frameworkUrl: "Build/Test2.framework.js.gz",
-        codeUrl: "Build/Test2.wasm.gz",
+        dataUrl: "Build/July20.data.gz",
+        frameworkUrl: "Build/July20.framework.js.gz",
+        codeUrl: "Build/July20.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "New Unity Project",
